<resources>
    <string name="app_name">Auto Pulkst</string>
    <string name="preset_prompt">Select a preset message</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="time_format">24 Hour Format</string>
    <string name="language">Language</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="clock_theme">Clock Theme</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="version">Version: %s</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="send_command">Send Command</string>
    <string name="disconnect">Disconnect</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="clear_history">Clear History</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="enter_custom_message">Enter Custom Message</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="check_status">Check Status</string>
    <string name="not_connected">Not Connected</string>
    <string name="auto_update_time">Auto Update Time</string>
    <string name="save_preset">Save Preset</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send_time">Send Time</string>
    <string-array name="predefined_messages">
        <item>@string/start_timer</item>
        <item>@string/stop_timer</item>
        <item>@string/reset_timer</item>
        <item>@string/check_status</item>
    </string-array>
    <string name="connected">Connected</string>
    <string name="device_ready">Device is Ready</string>
    <string name="connect_device">Please Connect Device</string>
    <string name="current_time">Current Time</string>
    <string name="send_selected_time">Send Selected Time</string>
    <string name="preset_messages">Preset Messages</string>
    <string name="add">Add</string>
    <string name="connect">Connect</string>
    <string name="add_message">Add Message</string>
    <string name="edit_message">Edit Message</string>
    <string name="delete_message">Delete Message</string>
    <string name="message">Message</string>
    <string name="delete_confirm">Are you sure you want to delete this message?</string>
    <string name="message_sent">Message Sent</string>
    <string name="failed_to_send">Failed to send: %s</string>
    <string name="time_sent">Time Sent: %s</string>
    <string name="failed_to_send_time">Failed to send time: %s</string>
    <string name="current_time_sent">Current Time Sent: %s</string>
    <string name="failed_to_reconnect">Failed to reconnect: %s</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="error_connecting">Error connecting: %s</string>
    <string name="auto_update_error">Auto update error: %s</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="no_history">No past message history available</string>
    <string name="no_messages_in_range">No messages were found for the selected date range</string>
    <string name="try_different_range">Try selecting a different date range</string>
    <string name="set_on">Set on: %s</string>
    <string name="time_set_to">Time set to: %s</string>
    <string name="message_sent_desc">Message sent: %s</string>
    <string name="no_preset_messages">No preset messages yet.\nAdd one using the button above.</string>
    <string name="no_history_yet">No parking history yet</string>
    <string name="no_history_in_range">No history found in selected date range</string>
    <string name="showing_filtered_results">Showing filtered results</string>

    <!-- Theme Names -->
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_colorful">Colorful</string>
    <string name="theme_minimalist">Minimalist</string>

    <!-- Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_history">History</string>
    <string name="navigation_settings">Settings</string>
</resources>