<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Dark Mode -->
        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode" />

        <!-- Time Format -->
        <Switch
            android:id="@+id/switchTimeFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_format" />

        <!-- Language Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />
        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <!-- Clock Themes -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_theme"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />
        <Spinner
            android:id="@+id/spinnerClockTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Bluetooth Device Management -->
        <Button
            android:id="@+id/btnBluetoothSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_settings"
            android:layout_marginTop="16dp" />
        <!-- App Version -->
        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="16dp" />


    </LinearLayout>
</ScrollView>