<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/btnFilterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_date"
            android:backgroundTint="@color/dark_blue"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_filter"
            android:backgroundTint="@color/dark_blue"
            android:layout_marginEnd="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:backgroundTint="@color/dark_blue" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />

</LinearLayout>
